# smartesprit_3b2_alphateam

./: Makefile  README.md  config.status  smartesprit.glade  smartesprit.glade.bak  smartesprit.gladep
autom4te.cache/: requests
src/: CRUD.c  CRUD.h  Etudiants.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  capteur.c  capteur.h  capteur.txt  capteurdefectueux.txt  debit.txt  debitdef.txt  etudiants.c  etudiants.h  interface.c  interface.h  main.c  menu.c  menu.h  menu.txt  mouvement.txt  mouvementdef.txt  produitsortie.txt  rupture.txt  smartesprit  smoke.txt  smokedef.txt  stocks.txt  temperature.txt  temperature1.txt  temperaturedef.txt  tree.c  tree.h  utilisateur.txt
src/.deps/: callbacks.Po  etudiants.Po
